--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -38,3 +38,48 @@ h1.app-name {
        Every toolbar row uses a flexbox row layout. */
     flex: 1 1 auto;
 }
+
+.municipality__squared {
+    width: 55px;
+    height: 55px;
+    line-height: 80px;
+}
+.municipality__squared img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.municipality__name {
+    padding-left: 10px;
+    font-size: 32px;
+}
+
+@media only screen and (max-width: 600px) {
+    .municipality__squared {
+        width: 40px;
+        height: 40px;
+        line-height: 60px;
+    }
+    .municipality__name {
+        padding-left: 10px;
+        font-size: 24px;
+    }
+}
+
+@media only screen and (max-width: 440px) {
+    .municipality__name {
+        padding-left: 10px;
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 360px) {
+    .municipality__squared {
+        display: none;
+    }
+
+    .municipality__name {
+        padding-left: 0px;
+    }
+}
