--- a/src/app/nuova-pratica/nuova-pratica.component.html
+++ b/src/app/nuova-pratica/nuova-pratica.component.html
@@ -9,6 +9,7 @@
                     <mat-radio-button [value]="option.value">{{option.name}}</mat-radio-button>
                 </ng-container>
             </mat-radio-group>
+            <mat-error>{{getErrorMessage(firstFormGroup.get('tipo_pratica'))}}</mat-error>
         </div>
         <div>
           <button mat-button matStepperNext>Avanti</button>
@@ -21,10 +22,12 @@
         <mat-form-field class="div-full" appearance="outline">
           <mat-label>Oggetto</mat-label>
           <input matInput formControlName="oggetto" placeholder="Oggetto" required>
+          <mat-error>{{getErrorMessage(secondFormGroup.get('oggetto'))}}</mat-error>
         </mat-form-field>
         <mat-form-field class="div-full" appearance="outline">
             <mat-label>Breve descrizione</mat-label>
             <textarea matInput formControlName="descrizione" placeholder="Breve descrizione" required></textarea>
+            <mat-error>{{getErrorMessage(secondFormGroup.get('descrizione'))}}</mat-error>
           </mat-form-field>
         <div>
           <button mat-button matStepperPrevious>Indietro</button>
