--- a/src/assets/css/form-style.scss
+++ b/src/assets/css/form-style.scss
@@ -64,6 +64,11 @@ mat-radio-button{
     margin-left: 1em;
 }
 
+.upload-button .mat-raised-button {
+    background-color: #3f51b5;
+    color: white;
+}
+
 .mat-form-field, .div-checkbox, .div-radio-group,
  .div-button, .padding-div, .list-element {
     padding-left: 4px;
