--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -103,12 +103,12 @@
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Telefono</mat-label>
-                <input formControlName="telefono" matInput type="number">
+                <input formControlName="telefono" matInput type="number" (change)="check(form.get('referente'), 'telefono','cellulare')">
                 <mat-error>{{getErrorMessage(form.get('referente').get('telefono'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
                 <mat-label>Cellulare</mat-label>
-                <input formControlName="cellulare" matInput type="number">
+                <input formControlName="cellulare" matInput type="number" (change)="check(form.get('referente'), 'cellulare','telefono')">
                 <mat-error>{{getErrorMessage(form.get('referente').get('cellulare'))}}</mat-error>
             </mat-form-field>
             <mat-form-field class="div-half" appearance="outline">
@@ -121,6 +121,7 @@
                 <input formControlName="pec" matInput type="email">
                 <mat-error>{{getErrorMessage(form.get('referente').get('pec'))}}</mat-error>
             </mat-form-field>
+            <mat-error>{{getErrorMessage(form.get('referente'))}}</mat-error>
         </mat-expansion-panel>
         <!-- <mat-expansion-panel formGroupName="tecnico" class="tecnico-group" expanded>
             <mat-expansion-panel-header>
