--- a/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
+++ b/src/app/pratiche/moduli/richiesta-rottura-suolo/richiesta-rottura-suolo.component.html
@@ -412,7 +412,7 @@
                 <mat-error>{{getErrorMessage(form.get('allegati_pratica').get('polizza_fidejussoria'))}}</mat-error>
             </mat-card> -->
         </mat-expansion-panel>
-        <button class="button-login" mat-raised-button color="primary" (click)="save()">Salva</button>
+        <button class="button-login" mat-raised-button color="primary" (click)="save($event)">Salva</button>
         <button class="button-login" mat-raised-button color="primary" (click)="submit()">Convalida</button>
     </form>
 </div>
