--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,9 @@
           <mat-list-item (click)="mobileQuery.matches ? snav.toggle() : null" routerLink="nuova-pratica">
             <h4 matLine>Nuova Pratica</h4>
           </mat-list-item>
+          <mat-list-item (click)="mobileQuery.matches ? snav.toggle() : null" routerLink="mie-pratiche">
+            <h4 matLine>Le mie pratiche</h4>
+          </mat-list-item>
         <mat-divider></mat-divider>
       </mat-nav-list>
     </mat-sidenav>
