--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import 'assets/css/ol.css';
 @import 'assets/css/form-style.scss';
 
 html, body { height: 100%; }
