aggiunta funzione disegna poligono

--- a/src/app/core/components/map/map.component.html
+++ b/src/app/core/components/map/map.component.html
@@ -1,3 +1,8 @@
 <div mat-dialog-content class="container-map">
     <div id="map" class="map"></div>
+    <div class="panel">
+        <button (click)="addInteraction('Polygon')">
+            Area scavo
+        </button>
+    </div>
 </div>
