aggiunta cancellazione delle geometrie

--- a/src/app/core/components/map/map.component.html
+++ b/src/app/core/components/map/map.component.html
@@ -4,5 +4,8 @@
         <button (click)="addInteraction('Polygon')">
             Area scavo
         </button>
+        <button (click)="removeSelectedFeature()">
+            Cangella geometrie
+        </button>
     </div>
 </div>
