piccole funzionalità di lettura delle feature

--- a/src/app/core/components/map/map.component.html
+++ b/src/app/core/components/map/map.component.html
@@ -1,14 +1,14 @@
 <div mat-dialog-content class="container-map">
     <div id="map" class="map"></div>
     <div class="panel">
-        <button (click)="addInteraction('Polygon', 'source')">
+        <button (click)="addInteraction('Polygon')">
             Area scavo
         </button>
-        <button (click)="addInteraction('Polygon', 'source_cantiere')">
+        <button (click)="addInteraction('Polygon')">
             Area scavo
         </button>
-        <button (click)="removeSelectedFeature()">
+        <!-- <button (click)="removeSelectedFeature()">
             Cangella geometrie
-        </button>
+        </button> -->
     </div>
 </div>
