--- a/src/app/core/components/map/map.component.scss
+++ b/src/app/core/components/map/map.component.scss
@@ -9,36 +9,47 @@
     right: 0px;
 }
 
-.ol-tooltip {
-    position: relative;
-    background: rgba(0, 0, 0, 0.5);
-    border-radius: 4px;
-    color: white;
-    padding: 4px 8px;
-    opacity: 0.7;
-    white-space: nowrap;
-    font-size: 12px;
-  }
-  .ol-tooltip-measure {
-    opacity: 1;
-    font-weight: bold;
-  }
-  .ol-tooltip-static {
-    background-color: #ffcc33;
-    color: black;
-    border: 1px solid white;
-  }
-  .ol-tooltip-measure:before,
-  .ol-tooltip-static:before {
-    border-top: 6px solid rgba(0, 0, 0, 0.5);
-    border-right: 6px solid transparent;
-    border-left: 6px solid transparent;
-    content: "";
-    position: absolute;
-    bottom: -6px;
-    margin-left: -7px;
-    left: 50%;
-  }
-  .ol-tooltip-static:before {
-    border-top-color: #ffcc33;
-  }
+.map:-webkit-full-screen {
+  height: 100%;
+  margin: 0;
+}
+.map:-ms-fullscreen {
+  height: 100%;
+}
+.map:fullscreen {
+  height: 100%;
+}
+
+// .ol-tooltip {
+//     position: relative;
+//     background: rgba(0, 0, 0, 0.5);
+//     border-radius: 4px;
+//     color: white;
+//     padding: 4px 8px;
+//     opacity: 0.7;
+//     white-space: nowrap;
+//     font-size: 12px;
+//   }
+//   .ol-tooltip-measure {
+//     opacity: 1;
+//     font-weight: bold;
+//   }
+//   .ol-tooltip-static {
+//     background-color: #ffcc33;
+//     color: black;
+//     border: 1px solid white;
+//   }
+//   .ol-tooltip-measure:before,
+//   .ol-tooltip-static:before {
+//     border-top: 6px solid rgba(0, 0, 0, 0.5);
+//     border-right: 6px solid transparent;
+//     border-left: 6px solid transparent;
+//     content: "";
+//     position: absolute;
+//     bottom: -6px;
+//     margin-left: -7px;
+//     left: 50%;
+//   }
+//   .ol-tooltip-static:before {
+//     border-top-color: #ffcc33;
+//   }
