--- a/src/app/core/components/map/map.component.scss
+++ b/src/app/core/components/map/map.component.scss
@@ -1,23 +1,73 @@
+.mat-dialog-content {
+  max-height: 100%;
+  height: 100%;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+
 .container-map, .map{
     height: 100%;
     width: 100%;
     z-index: 2;
 }
 
-.panel{
-    top: 0px;
-    right: 0px;
+.menu_button{
+  top: 1em;
+  left: 1em;
+  z-index: 10;
+  width: 36px;
+  max-width: none;
 }
 
-.map:-webkit-full-screen {
+// .map:-webkit-full-screen {
+//   height: 100%;
+//   margin: 0;
+// }
+// .map:-ms-fullscreen {
+//   height: 100%;
+// }
+// .map:fullscreen {
+//   height: 100%;
+// }
+
+.fullscreen:-webkit-full-screen {
   height: 100%;
   margin: 0;
 }
-.map:-ms-fullscreen {
+.fullscreen:-ms-fullscreen {
   height: 100%;
 }
-.map:fullscreen {
+
+.fullscreen:fullscreen {
   height: 100%;
+}
+
+.fullscreen {
+  margin-bottom: 10px;
+  width: 100%;
+  height: 400px;
+}
+
+.ol-rotate {
+  top: 3em;
+}
+
+.map {
+  width: 100%;
+  height: 100%;
+}
+
+.sidepanel {
+  width: 30%;
+}
+
+.sidepanel-title {
+  width: 100%;
+  font-size: 3em;
+  color: #ffffff;
+  display: block;
+  text-align: center;
 }
 
 // .ol-tooltip {
