--- a/src/app/core/components/map/map.component.scss
+++ b/src/app/core/components/map/map.component.scss
@@ -12,12 +12,67 @@
     z-index: 2;
 }
 
-.menu_button{
-  top: 1em;
-  left: 1em;
-  z-index: 10;
-  width: 36px;
-  max-width: none;
+.sidepanel {
+  width: 30%;
+  top: .5em;
+  left: .5em;
+  position: absolute;
+}
+
+.menu_panel{
+  border-radius: 5px;
+  font-size: larger;
+  height: 56px;
+  width: max-content;
+}
+
+.menu_panel button{
+  min-width: 0px;
+  width: 46px;
+  padding: 0px;
+}
+
+#edit_panel {
+  width: fit-content;
+  top: 50%;
+  left: 0.5em;
+  position: absolute;
+}
+
+#edit_panel button{
+  min-width: 0px;
+  width: 2.6em;
+  height: 2.6em;
+  padding: 0px;
+  display: block;
+  background-color: rgb(245, 245, 245);
+}
+
+#edit_panel button:not(:last-child) {
+  border-bottom: none; /* Prevent double borders */
+}
+
+#close_panel {
+  position: absolute;
+  top: .5em;
+  right: .5em;
+}
+
+#close_panel button {
+  min-width: 0px;
+  width: 2.6em;
+  height: 2.6em;
+  padding: 0px;
+  display: block;
+  background-color: rgb(245, 245, 245);
+}
+
+.nested_icon{
+  position: absolute;
+  top: 0.1em;
+  left: 0.1em;
+  font-size: 200%;
+  color: rgba(217, 83, 79, 0.7);
 }
 
 // .map:-webkit-full-screen {
@@ -51,23 +106,6 @@
 
 .ol-rotate {
   top: 3em;
-}
-
-.map {
-  width: 100%;
-  height: 100%;
-}
-
-.sidepanel {
-  width: 30%;
-}
-
-.sidepanel-title {
-  width: 100%;
-  font-size: 3em;
-  color: #ffffff;
-  display: block;
-  text-align: center;
 }
 
 // .ol-tooltip {
