--- a/src/app/core/components/map/map.component.scss
+++ b/src/app/core/components/map/map.component.scss
@@ -13,7 +13,7 @@
 }
 
 .sidepanel {
-  width: 30%;
+  width: fit-content;;
   top: .5em;
   left: .5em;
   position: absolute;
@@ -23,7 +23,13 @@
   border-radius: 5px;
   font-size: larger;
   height: 56px;
-  width: max-content;
+  display: flex;
+  box-sizing: border-box;
+  padding: 0 16px;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  white-space: nowrap;
 }
 
 .menu_panel button{
@@ -39,18 +45,40 @@
   position: absolute;
 }
 
-#edit_panel button{
+#zoom_panel {
+  position: absolute;
+  top: 4em;
+  right: 0.5em;
+}
+
+#edit_panel button,
+#zoom_panel button{
   min-width: 0px;
   width: 2.6em;
   height: 2.6em;
   padding: 0px;
   display: block;
   background-color: rgb(245, 245, 245);
+  border-radius: 0px;
 }
 
-#edit_panel button:not(:last-child) {
+#edit_panel button:not(:last-child),
+#zoom_panel button:not(:last-child) {
   border-bottom: none; /* Prevent double borders */
 }
+
+#edit_panel button:first-child,
+#zoom_panel button:first-child {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+#edit_panel button:last-child,
+#zoom_panel button:last-child{
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
 
 #close_panel {
   position: absolute;
@@ -67,13 +95,11 @@
   background-color: rgb(245, 245, 245);
 }
 
-.nested_icon{
-  position: absolute;
-  top: 0.1em;
-  left: 0.1em;
-  font-size: 200%;
-  color: rgba(217, 83, 79, 0.7);
+fa-icon{
+  font-size: large;
 }
+
+
 
 // .map:-webkit-full-screen {
 //   height: 100%;
