--- a/src/assets/css/map.scss
+++ b/src/assets/css/map.scss
@@ -1,3 +1,12 @@
 .map_dialog mat-dialog-container{
     padding: 0px;
 }
+
+
+.selected_button{
+    background-color: #c7c7c7 !important;
+}
+
+.ol-attribution button{
+    outline: none;
+}
