--- a/src/app/core/components/map/map.component.html
+++ b/src/app/core/components/map/map.component.html
@@ -48,15 +48,22 @@
             <fa-icon icon="layer-group"></fa-icon>
         </button>
         <mat-menu class="menu_layers" #appMenu="matMenu" yPosition="above">
-            <h3>Wms</h3>
-            <section class="wms_layers">
-                <mat-checkbox class="example-margin" (click)="$event.stopPropagation();" >Checked</mat-checkbox>
-                <mat-checkbox class="example-margin" (click)="$event.stopPropagation();" >Indeterminate</mat-checkbox>
-            </section>
-            <h3>Livelli base</h3>
-            <mat-radio-group class="base_layers">
-                <mat-radio-button value="1" (click)="$event.stopPropagation();">Option 1</mat-radio-button>
-            </mat-radio-group>
+            <ng-container *ngIf="!loading_map">
+
+                <h3 *ngIf="getLayers().length > 0">Livelli vettoriali</h3>
+                <ng-container *ngFor="let layer of getLayers()">
+                    <section class="wms_layers">
+                        <mat-checkbox class="example-margin" [checked]="layer.getVisible()" (change)="onChangeWMS(layer)"
+                        [value]="layer.ol_uid" (click)="$event.stopPropagation();" >{{layer.get('name')}}</mat-checkbox>
+                    </section>
+                </ng-container>
+                <h3 *ngIf="getBaseLayers().length > 0">Mappe</h3>
+                <ng-container *ngFor="let layer of getBaseLayers()">
+                    <mat-radio-group class="base_layers" (change)="onChangeBaseLayers($event.value)">
+                        <mat-radio-button [value]="layer" [checked]="layer.getVisible()" (click)="$event.stopPropagation();">{{layer.get('name')}}</mat-radio-button>
+                    </mat-radio-group>
+                </ng-container>
+            </ng-container>
         </mat-menu>
     </div>
 </div>
