--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,14 +4,11 @@
             Benvenuti
         </mat-card-title>
         <mat-card-subtitle>
-            Sezione dedicata alla richiesta delle autorizzazioni per il comune di Chiavari
+            Sezione dedicata alla richiesta delle Autorizzazioni per il Comune di Chiavari
         </mat-card-subtitle>
         <mat-card-content>
-            Seguendo pochissimi passaggi avrete la possibilità di innoltrare in modo 
-            digitale divversi tipi di richieste di autorizzazzione verso il comune di Chiavari.
-            Una volta registati avete la possibilità di innoltrate le seguenti richieste:
+            Seguendo pochissimi passaggi avrete la possibilità di inoltrare in modo digitale!.
             <br>
-            <span *ngFor="let richiesta of richieste">- <a [href]="richiesta.link">{{richiesta.name}}</a></span>
         </mat-card-content>
     </mat-card>
 </div>
