--- a/src/app/nuova-pratica/nuova-pratica.component.html
+++ b/src/app/nuova-pratica/nuova-pratica.component.html
@@ -1,16 +1,15 @@
 <mat-vertical-stepper [linear]="true" #stepper>
   <mat-step *ngIf="isUserLoggedIn == false">
     <ng-template matStepLabel>Accesso al sistema</ng-template>
-    <mat-label>E' richiesto l'accesso al portale per inviare le pratiche, puoi farlo cliccando <a href="/login">qui</a>
-    </mat-label>
-    <p>Se non farlo ora, sarà necessario effettuarlo prima di inoltrare la pratica.</p>
+    <mat-label>E' richiesto l'accesso al portale per inviare le pratiche, puoi farlo cliccando </mat-label><a href="/login"><button class="button-login" mat-raised-button color="primary">qui</button></a>
+    <p>Se non vuoi farlo ora, sarà necessario effettuarlo prima di inoltrare la pratica.</p>
     <div>
       <button mat-button matStepperNext>Avanti</button>
     </div>
   </mat-step>
   <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
-      <ng-template matStepLabel>Specificare il tipo di pratica</ng-template>
+      <ng-template matStepLabel>Selezionare la tipologia di pratica</ng-template>
       <div class="div-radio-group">
         <mat-label>Selezionare il tipo di pratica:</mat-label>
         <mat-radio-group formControlName="tipo_pratica" class="vartical-radiobutton">
