--- a/src/app/ricerca-pratiche/ricerca-pratiche.component.html
+++ b/src/app/ricerca-pratiche/ricerca-pratiche.component.html
@@ -10,7 +10,7 @@
     <mat-expansion-panel formGroupName="referente" class="referente-group" [expanded]="true">
         <mat-expansion-panel-header>
             <mat-panel-title>
-                Referente
+                Referente/Titolare/Professionista
             </mat-panel-title>
         </mat-expansion-panel-header>
         <mat-form-field class="div-full" appearance="outline">
